<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- delete sentence to delete a cloth -->
    <TextView
        android:id="@+id/deleteSentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteClothe"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        />

    <!-- ok button to accept -->
    <Button
        android:id="@+id/ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deleteSentence"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button_background"
        android:text="@string/ok"
        android:textColor="@color/red"
        android:layout_margin="15dp"
        />

    <!-- cancel button to cancel -->
    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deleteSentence"
        android:layout_alignParentStart="true"
        android:background="@drawable/button_background"
        android:text="@string/cancel"
        android:textColor="@color/red"
        android:layout_margin="15dp"
        />

</RelativeLayout>